...
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="2dp">
    </TextView>

    <EditText
        android:id="@+id/EjerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Titulo*"
...
