<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentacion.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".Presentacion.MainActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/img_5"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:titleTextColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/buscar_ruts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:iconifiedByDefault="false"
                    app:queryHint="Título"/>

                <Button
                    android:id="@+id/filterRutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:text="Filtros"
                    android:maxLines="1"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutFiltrosRuts"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="Grupo Muscular"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:padding="12dp"
                    android:textSize="15sp"/>
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/RutsMuscGroupChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true"
                        />
                </HorizontalScrollView>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Ejercicios"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:padding="12dp"
                    android:textSize="15sp"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/RutEjFilterChipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true"
                        />
                </HorizontalScrollView>
            </LinearLayout>

            <TextView
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="28dp"
                android:text="Tus rutinas creadas"
                android:textSize="20sp"
                android:textStyle="normal|bold">
            </TextView>


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:rowCount="4"
                android:columnCount="2"
                android:scrollbars="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listOfRuts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </GridLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4D4FF"
            android:src="@drawable/baseline_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86"
            tools:ignore="MissingConstraints"
            android:contentDescription="Crear Ejercicio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>